# snipara-server

./: .env  .env.example  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: BENCHMARK_PLAN.md  README.md  RESULTS.md  __init__.py  code_graph_benchmark.py  companion_benchmark.py  comprehensive_benchmark.py  config.py  hybrid_audit_regression.py  runner.py  snipara_client.py  suite_benchmark.py  tune_search_normalization.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INTEGRATOR.md  generate-api-docs.py
logs/: 0023e6cb-8221-4599-9ea0-58c853e8563e.jsonl  006e1b34-b7d7-4ee4-9894-1dcc20bd689c.jsonl  009c32f4-a209-4435-9806-7b1cfc6bf26f.jsonl  00b2ea6f-b381-4062-8f7c-b4b2f55ea0ea.jsonl  00fe3572-4ff1-471f-810f-c2325ca340a0.jsonl  019d4964-3a55-4667-9eba-f2cab5460576.jsonl  01a56845-b266-4004-8363-181bbe83c1b8.jsonl  01b97767-6247-4015-9c99-18ce7840f659.jsonl  02244927-c82b-446f-96e5-8f6c311de911.jsonl  024fee42-9c2a-42ac-b42d-40bcd6067501.jsonl  025dfb10-2206-445f-8143-082f9d0b13c9.jsonl  02cb6391-8867-4fe7-a13e-37f88b709678.jsonl  02f3d531-0fc1-49d3-a5b0-bd6ce1637a4e.jsonl  042f219a-cbc3-49f2-a5a7-2b5595307914.jsonl  045bd578-0882-4322-9c0d-2ef8135d514d.jsonl  04a1bc22-1ca7-4cf8-91c9-9a8c7ce8e333.jsonl  (+1022 more)
mcp-stdio-bridge/: server.py
snipara-sdk/: README.md  pyproject.toml
snipara-sdk/src/snipara/: __init__.py  _version.py  client.py  config.py  sync_client.py  watcher.py
snipara-sdk/src/snipara/cli/: __init__.py  main.py
snipara-sdk/src/snipara/cli/commands/: __init__.py  config_cmd.py  init.py  login.py  logout.py  status.py  sync.py  watch.py
snipara-sdk/tests/: __init__.py  conftest.py  test_cli_init.py  test_client.py  test_config.py  test_sync_client.py  test_watcher.py
(+680 files in other folders)
