[project]
name = "snipara"
version = "0.1.0"
description = "Unified Python SDK for Snipara — Context optimization and Agent infrastructure for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Snipara", email = "support@starbox-group.com"}]
keywords = ["snipara", "mcp", "llm", "context", "sdk", "agents", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "snipara-mcp>=2.3.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "click>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
runtime = ["rlm-runtime>=0.1.0"]
watch = ["watchfiles>=0.21.0"]
all = [
    "rlm-runtime>=0.1.0",
    "watchfiles>=0.21.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
snipara = "snipara.cli.main:cli"

[project.urls]
Homepage = "https://snipara.com"
Documentation = "https://snipara.com/docs"
Repository = "https://github.com/Snipara/snipara-sdk"

[build-system]
requires = ["hatchling<1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snipara"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
